--- a/index.html
+++ b/index.html
@@ -153,26 +153,14 @@
 
   <!-- Gallery -->
   <div class="gallery">
-    <img
-      src="file:///C:/Users/Mutesi%20%26%20ursula/Desktop/mine/wishes.jpeg"
-      alt="Wishes"
-      class="side-img"
-    />
-    <img
-      src="file:///C:/Users/Mutesi%20%26%20ursula/Desktop/mine/sir%20j.jpeg"
-      alt="Sir J"
-      class="center-img"
-    />
-    <img
-      src="file:///C:/Users/Mutesi%20%26%20ursula/Desktop/mine/wish.jpeg"
-      alt="Wish"
-      class="side-img"
-    />
+    <img src="images/wishes.jpeg" alt="Wishes" class="side-img" />
+    <img src="images/sir_j.jpeg" alt="Sir J" class="center-img" />
+    <img src="images/wish.jpeg" alt="Wish" class="side-img" />
   </div>
 
   <!-- Music -->
   <audio controls autoplay loop>
-    <source src="file:///C:/Users/Mutesi%20%26%20ursula/Downloads/WhatsApp%20Audio%202025-06-24%20at%2010.32.05%20PM.mpeg" type="audio/mpeg" />
+    <source src="audio/song.mp3" type="audio/mpeg" />
     Your browser does not support the audio tag.
   </audio>
 
@@ -192,3 +180,4 @@
 
 </body>
 </html>
+
