--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <!-- Gallery -->
   <div class="gallery">
     <img src="images/wishes.jpeg" alt="Wishes" class="side-img" />
-    <img src="images/sir%20j.jpeg" alt="Sir J" class="center-img" />
+    <img src="images/sir j.jpeg" alt="Sir J" class="center-img" />
     <img src="images/wish.jpeg" alt="Wish" class="side-img" />
   </div>
 
